examples/test/testpolicy8997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8997
  namespace: namespace479
spec:
  podSelector:
    matchLabels:
      key38: value18
      key42: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value48
      podSelector:
        matchLabels:
          key47: value2
          key48: value19
          key14: value10
